--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -40,7 +40,7 @@ jobs:
           password: "${{ secrets.ACR_PASSWORD }}"
       - name: Build and push image
         run: |
-          docker build -t ${{ secrets.ALI_NAMESPACE_URL }}/$MODULE_1:latest ./dasedevops_spring_demo/$MODULE_1
+          docker build -t ${{ secrets.ALI_NAMESPACE_URL }}/$$MODULE_1:latest ./dasedevops_spring_demo/$MODULE_1
           docker push ${{ secrets.ALI_NAMESPACE_URL }}/$MODULE_1:latest
           docker build -t ${{ secrets.ALI_NAMESPACE_URL }}/$MODULE_2:latest ./dasedevops_spring_demo/$MODULE_2
           docker push ${{ secrets.ALI_NAMESPACE_URL }}/$MODULE_2:latest
