--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -40,18 +40,18 @@ jobs:
           password: "${{ secrets.ACR_PASSWORD }}"
       - name: Build and push image
         run: |
-          docker build -t ${{ secrets.ALI_NAMESPACE_URL }}/$$MODULE_1:latest ./dasedevops_spring_demo/$MODULE_1
-          docker push ${{ secrets.ALI_NAMESPACE_URL }}/$MODULE_1:latest
-          docker build -t ${{ secrets.ALI_NAMESPACE_URL }}/$MODULE_2:latest ./dasedevops_spring_demo/$MODULE_2
-          docker push ${{ secrets.ALI_NAMESPACE_URL }}/$MODULE_2:latest
-          docker build -t ${{ secrets.ALI_NAMESPACE_URL }}/$MODULE_3:latest ./dasedevops_spring_demo/$MODULE_3
-          docker push ${{ secrets.ALI_NAMESPACE_URL }}/$MODULE_3:latest
-          docker build -t ${{ secrets.ALI_NAMESPACE_URL }}/$MODULE_4:latest ./dasedevops_spring_demo/$MODULE_4
-          docker push ${{ secrets.ALI_NAMESPACE_URL }}/$MODULE_4:latest
-          docker build -t ${{ secrets.ALI_NAMESPACE_URL }}/$MODULE_5:latest ./dasedevops_spring_demo/$MODULE_5
-          docker push ${{ secrets.ALI_NAMESPACE_URL }}/$MODULE_5:latest
-          docker build -t ${{ secrets.ALI_NAMESPACE_URL }}/$MODULE_6:latest ./dasedevops_spring_demo/$MODULE_6
-          docker push ${{ secrets.ALI_NAMESPACE_URL }}/$MODULE_6:latest
+          docker build -t cr.console.aliyun.com/cn-shanghai/instance/yuan-rui-qi/$$MODULE_1:latest ./dasedevops_spring_demo/$MODULE_1
+          docker push cr.console.aliyun.com/cn-shanghai/instance/yuan-rui-qi/$MODULE_1:latest
+          docker build -t cr.console.aliyun.com/cn-shanghai/instance/yuan-rui-qi/$MODULE_2:latest ./dasedevops_spring_demo/$MODULE_2
+          docker push cr.console.aliyun.com/cn-shanghai/instance/yuan-rui-qi/$MODULE_2:latest
+          docker build -t cr.console.aliyun.com/cn-shanghai/instance/yuan-rui-qi/$MODULE_3:latest ./dasedevops_spring_demo/$MODULE_3
+          docker push cr.console.aliyun.com/cn-shanghai/instance/yuan-rui-qi/$MODULE_3:latest
+          docker build -t cr.console.aliyun.com/cn-shanghai/instance/yuan-rui-qi/$MODULE_4:latest ./dasedevops_spring_demo/$MODULE_4
+          docker push cr.console.aliyun.com/cn-shanghai/instance/yuan-rui-qi/$MODULE_4:latest
+          docker build -t cr.console.aliyun.com/cn-shanghai/instance/yuan-rui-qi/$MODULE_5:latest ./dasedevops_spring_demo/$MODULE_5
+          docker push cr.console.aliyun.com/cn-shanghai/instance/yuan-rui-qi/$MODULE_5:latest
+          docker build -t cr.console.aliyun.com/cn-shanghai/instance/yuan-rui-qi/$MODULE_6:latest ./dasedevops_spring_demo/$MODULE_6
+          docker push cr.console.aliyun.com/cn-shanghai/instance/yuan-rui-qi/$MODULE_6:latest
  
       - name: Copy single file to remote
         uses: garygrossgarten/github-action-scp@release
